container-technology-tutorial/K8s/webapp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
        - name: webapp1
          image: katacoda/docker-http-server:latest
          ports:
            - containerPort: 3000
        - name: webapp1-exporter
          image: katacoda/example-exporter
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  ports:
    - name: webapp1
      port: 3000
      targetPort: 3000
    - name: webapp1-exporter
      port: 4000
      targetPort: 4000
  selector:
    app: webapp1
