container-technology-tutorial/K8s/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  tls:
  - hosts:
    - mongo-express.com
    secretName: mongo-express-secret-tls
  rules:
    - host: mongo-express.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
